--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,9 @@ color: #434455;
 /* #endregion-features */
 
 /* #region team */
-.team {}
+.team {
+    background-color: #f4f4fd;
+}
 
 .team-title {
 font-weight: 700;
